--- a/demo/image_gallery.html
+++ b/demo/image_gallery.html
@@ -30,8 +30,8 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager -->    </head>
-    <body>
         <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><body> <![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
         <!-- HEADER:Start -->
         <!-- Google Tag Manager (noscript) -->
@@ -541,7 +541,7 @@
                                                 <h4><b>Standard install</b></h4>
                                             </div>
                                             <div class="col-xs-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#summernote" aria-expanded="false" aria-controls="summernote"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#summernote" aria-expanded="false" aria-controls="summernote"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="summernote">
@@ -601,7 +601,7 @@
                                                 <h4><b>All AJAX</b></h4>
                                             </div>
                                             <div class="col-xs-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#magnific_ajax" aria-expanded="false" aria-controls="magnific_ajax"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#magnific_ajax" aria-expanded="false" aria-controls="magnific_ajax"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="magnific_ajax">
@@ -642,7 +642,7 @@
                                                 <h4><b>Youtube/Vimeo/etc. embeds</b></h4>
                                             </div>
                                             <div class="col-xs-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#magnific_embeds" aria-expanded="false" aria-controls="magnific_embeds"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#magnific_embeds" aria-expanded="false" aria-controls="magnific_embeds"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="magnific_embeds">
