--- a/demo/layout.html
+++ b/demo/layout.html
@@ -33,9 +33,8 @@
         <link rel="stylesheet" href="../dist/plugins/prism/prism.min.css">
 
     </head>
-    <body>
-
         <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><body> <![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
         <!-- HEADER:Start -->
         <!-- Google Tag Manager (noscript) -->
@@ -626,7 +625,7 @@
                                                 <h4><b>Basic top navigation</b></h4>
                                             </div>
                                             <div class="col-sm-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-example" aria-expanded="false" aria-controls="navbar-example"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-example" aria-expanded="false" aria-controls="navbar-example"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="navbar-example">
@@ -682,7 +681,7 @@
                                                 <h4><b>Top navigation with profile options</b></h4>
                                             </div>
                                             <div class="col-sm-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-with-login" aria-expanded="false" aria-controls="navbar-with-login"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-with-login" aria-expanded="false" aria-controls="navbar-with-login"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="navbar-with-login">
@@ -752,7 +751,7 @@
                                                 <h4><b>Top navigation with search bar and notifications</b></h4>
                                             </div>
                                             <div class="col-sm-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-with-search-and-notification" aria-expanded="false" aria-controls="navbar-with-search-and-notification"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-with-search-and-notification" aria-expanded="false" aria-controls="navbar-with-search-and-notification"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="navbar-with-search-and-notification">
@@ -843,7 +842,7 @@
                                                 <h4><b>Top navigation with language selector and notifications</b></h4>
                                             </div>
                                             <div class="col-sm-4">
-                                                <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-with-localization-and-notifications" aria-expanded="false" aria-controls=navbar-with-localization-and-notifications"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#navbar-with-localization-and-notifications" aria-expanded="false" aria-controls=navbar-with-localization-and-notifications"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                             </div>
                                         </div>
                                         <div class="collapse code-example"  id="navbar-with-localization-and-notifications">
