--- a/demo/add_form_example.html
+++ b/demo/add_form_example.html
@@ -36,9 +36,8 @@
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager -->
 </head>
-<body>
-
-<!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+    <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><body> <![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 <!-- HEADER:Start -->
 <!-- Google Tag Manager (noscript) -->
