--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -34,9 +34,8 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager --></head>
-<body>
-
 <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><body> <![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 <!-- HEADER:Start -->
 <!-- Google Tag Manager (noscript) -->
@@ -558,7 +557,7 @@
                                         <h4><b>Custom date format</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_custom_date" aria-expanded="false" aria-controls="masked_custom_date"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_custom_date" aria-expanded="false" aria-controls="masked_custom_date"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="masked_custom_date">
@@ -602,7 +601,7 @@
                                         <h4><b>Phone format</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_phone_format" aria-expanded="false" aria-controls="masked_phone_format"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_phone_format" aria-expanded="false" aria-controls="masked_phone_format"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="masked_phone_format">
@@ -646,7 +645,7 @@
                                         <h4><b>Serial number format</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_serial_number" aria-expanded="false" aria-controls="masked_serial_number"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_serial_number" aria-expanded="false" aria-controls="masked_serial_number"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="masked_serial_number">
@@ -690,7 +689,7 @@
                                         <h4><b>Custom number formatting</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_custom_number" aria-expanded="false" aria-controls="masked_custom_number"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#masked_custom_number" aria-expanded="false" aria-controls="masked_custom_number"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="masked_custom_number">
@@ -752,7 +751,7 @@
                                         <h4><b>Message</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#textarea_with_input_limiter" aria-expanded="false" aria-controls="textarea_with_input_limiter"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#textarea_with_input_limiter" aria-expanded="false" aria-controls="textarea_with_input_limiter"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="textarea_with_input_limiter">
@@ -804,7 +803,7 @@
                                         <h4><strong>Style 1</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file_upload_demo_1" aria-expanded="false" aria-controls="file_upload_demo_1"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file_upload_demo_1" aria-expanded="false" aria-controls="file_upload_demo_1"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="file_upload_demo_1">
@@ -850,7 +849,7 @@
                                         <h4><b>Style 2</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file_upload_demo_2" aria-expanded="false" aria-controls="file_upload_demo_2"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file_upload_demo_2" aria-expanded="false" aria-controls="file_upload_demo_2"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="file_upload_demo_2">
@@ -895,7 +894,7 @@
                                         <h4><b>Style 3</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file_upload_demo_3" aria-expanded="false" aria-controls="file_upload_demo_3"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file_upload_demo_3" aria-expanded="false" aria-controls="file_upload_demo_3"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="file_upload_demo_3">
@@ -966,7 +965,7 @@
                                         <h4><strong>Text input</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#text_input" aria-expanded="false" aria-controls="text_input"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#text_input" aria-expanded="false" aria-controls="text_input"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="text_input">
@@ -1028,7 +1027,7 @@
                                         <h4><strong>Text input</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jquery_autocomplete" aria-expanded="false" aria-controls="jquery_autocomplete"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jquery_autocomplete" aria-expanded="false" aria-controls="jquery_autocomplete"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="jquery_autocomplete">
@@ -1089,7 +1088,7 @@
                                         <h4><strong>Text input</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jquery_ui_sliders" aria-expanded="false" aria-controls="jquery_ui_sliders"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jquery_ui_sliders" aria-expanded="false" aria-controls="jquery_ui_sliders"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="jquery_ui_sliders">
@@ -1171,7 +1170,7 @@
                                         <h4><strong>Default</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jquery_numeric_input" aria-expanded="false" aria-controls="jquery_numeric_input"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#jquery_numeric_input" aria-expanded="false" aria-controls="jquery_numeric_input"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="jquery_numeric_input">
@@ -1232,7 +1231,7 @@
                                         <h4><strong>Autocomplete multiple</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_multiple" aria-expanded="false" aria-controls="autocomplete_multiple"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_multiple" aria-expanded="false" aria-controls="autocomplete_multiple"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="autocomplete_multiple">
@@ -1281,7 +1280,7 @@
                                         <h4><strong>Autocomplete multiple with option groups (limited to 5)</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_multiple_with_groups" aria-expanded="false" aria-controls="autocomplete_multiple_with_groups"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_multiple_with_groups" aria-expanded="false" aria-controls="autocomplete_multiple_with_groups"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="autocomplete_multiple_with_groups">
@@ -1340,7 +1339,7 @@
                                         <h4><strong>Autocomplete single</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_single" aria-expanded="false" aria-controls="autocomplete_single"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_single" aria-expanded="false" aria-controls="autocomplete_single"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="autocomplete_single">
@@ -1388,7 +1387,7 @@
                                         <h4><strong>Autocomplete single with option groups</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_single_with_groups" aria-expanded="false" aria-controls="autocomplete_single_with_groups"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_single_with_groups" aria-expanded="false" aria-controls="autocomplete_single_with_groups"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="autocomplete_single_with_groups">
@@ -1447,7 +1446,7 @@
                                         <h4><strong>Single select with disabled search</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_single_with_disabled_search" aria-expanded="false" aria-controls="autocomplete_single_with_disabled_search"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#autocomplete_single_with_disabled_search" aria-expanded="false" aria-controls="autocomplete_single_with_disabled_search"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="autocomplete_single_with_disabled_search">
