--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -33,9 +33,8 @@
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager -->
 </head>
-<body>
-
 <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><body> <![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 <!-- HEADER:Start -->
 <!-- Google Tag Manager (noscript) -->
@@ -543,7 +542,7 @@
                                         <h4><b>In page</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#fancytree" aria-expanded="false" aria-controls="fancytree"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#fancytree" aria-expanded="false" aria-controls="fancytree"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="fancytree">
@@ -583,7 +582,7 @@
                                         <h4><b>Category tree</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#category_tree" aria-expanded="false" aria-controls="category_tree"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#category_tree" aria-expanded="false" aria-controls="category_tree"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="category_tree">
@@ -679,7 +678,7 @@
                                         <h4><b>Category tree disabled</b></h4>
                                     </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#category_tree_disabled_container" aria-expanded="false" aria-controls="category_tree_disabled_container"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                        <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#category_tree_disabled_container" aria-expanded="false" aria-controls="category_tree_disabled_container"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                     </div>
                                 </div>
                                 <div class="collapse code-example"  id="category_tree_disabled_container">
