--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -35,8 +35,8 @@
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager -->
     </head>
-    <body>
         <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><body> <![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
         <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBSTRWM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -547,7 +547,7 @@
                                                     <h4><b>Standard install</b></h4>
                                                 </div>
                                                 <div class="col-xs-4">
-                                                    <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#summernote" aria-expanded="false" aria-controls="summernote"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                    <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#summernote" aria-expanded="false" aria-controls="summernote"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                                 </div>
                                             </div>
                                             <div class="collapse code-example"  id="summernote">
@@ -588,7 +588,7 @@
                                                     <h4><b>Air mode</b></h4>
                                                 </div>
                                                 <div class="col-xs-4">
-                                                    <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#summernote-air" aria-expanded="false" aria-controls="summernote-air"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
+                                                    <a class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#summernote-air" aria-expanded="false" aria-controls="summernote-air"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></a>
                                                 </div>
                                             </div>
                                             <div class="collapse code-example"  id="summernote-air">
