Feature(Layout): Added Google Analytics

--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -1014,8 +1014,8 @@
                 </section>
 
                 <section id="js-utilities" class="pad-top-30">
-                    <div class="show-panel code-example"">
-                        <div class="show-panel-body code-example"">
+                    <div class="show-panel code-example">
+                        <div class="show-panel-body code-example">
                             <h2><strong>Utilities</strong></h2>
 
                             <div class="code-container">
