--- a/demo/authentication.html
+++ b/demo/authentication.html
@@ -29,9 +29,18 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager -->    </head>
-        <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
-<![if !IE]><body><![endif]>
+        <!--[if lt IE 9]>
+<body class="lt-ie9">
+<![endif]-->
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
+<!--[if gt IE 8]>
+<body>
+<![endif]-->
+<!--[if !IE]> -->
+<body>
+<!-- <![endif]-->
+
+
         <!-- HEADER:Start -->
         <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBSTRWM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
