Refactor(PopSpace): Change popSpace ID

--- a/demo/layout.html
+++ b/demo/layout.html
@@ -604,7 +604,7 @@
         &lt;!-- PAGE:End --&gt;
 
         &lt;!-- POPUPS:Start --&gt;</span>
-        &lt;div id=&quot;popSpace&quot;&gt;&lt;/div&gt;
+        &lt;div id=&quot;pop_space&quot;&gt;&lt;/div&gt;
         <span class="text-success">&lt;!-- POPUPS:End --&gt;
 
         &lt;!-- SCRIPTS:Start --&gt;</span>
