--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -801,8 +801,8 @@
 </div>
 <!-- POPUPS:Start -->
 <div data-dependency-name="pop_space">
-    <!-- Div with id 'popSpace' must be inserted before the end of the body tag -->
-    <div id="popSpace"></div>
+    <!-- Div with id 'pop_space' must be inserted before the end of the body tag -->
+    <div id="pop_space"></div>
 </div>
 <!-- POPUPS:End -->
 
