--- a/demo/add_form_example.html
+++ b/demo/add_form_example.html
@@ -719,13 +719,13 @@
     </div>
 </div>        <!-- FOOTER:End -->
 
-        <!-- POPUPS:Start -->
-        <div id="popSpace"></div>
-        <!-- POPUPS:End -->
-
     </div>
 </div>
 <!-- PAGE:End -->
+
+<!-- POPUPS:Start -->
+<div id="pop_space"></div>
+<!-- POPUPS:End -->
 
 <!-- SCRIPTS:Start -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
