--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -1535,7 +1535,7 @@
 <!-- PAGE:End -->
 
 <!-- POPUPS:Start -->
-<div id="popSpace"></div>
+<div id="pop_space"></div>
 
 <!-- SCRIPTS:Start -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" data-dependency-name="jquery"></script>
