--- a/demo/plugin_hierarchicalselect.html
+++ b/demo/plugin_hierarchicalselect.html
@@ -574,7 +574,7 @@
 <!-- PAGE:End -->
 
 <!-- POPUPS:Start -->
-<div id="popSpace"></div>
+<div id="pop_space"></div>
 <!-- POPUPS:End -->
 
 <!-- SCRIPTS:Start -->
