--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -984,7 +984,7 @@
 
 <!-- POPUPS:Start -->
 <div data-dependency-name="pop_space">
-    <div id="popSpace"></div>
+    <div id="pop_space"></div>
 </div>
 <!-- POPUPS:End -->
 
