--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -177,6 +177,11 @@
                                 <span class="menu-text">Grid Layout</span>
                             </a>
                         </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/helper_classes.html">
+                                <span class="menu-text">Helper classes</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
@@ -515,6 +520,11 @@
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/email_template.html">
                                 <span class="menu-text">Email template</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/plugin_wizard.html">
+                                <span class="menu-text">Wizard</span>
                             </a>
                         </li>
                     </ul>
