Feature(Layout): Implement color scheme for navbar and sidebar

--- a/demo/image_gallery.html
+++ b/demo/image_gallery.html
@@ -197,6 +197,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/branding.html#navigationColours">
+                                <span class="menu-text">Navigation colors</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/branding.html#typography">
                                 <span class="menu-text">Typography</span>
                             </a>
