Feature(Layout): Implement color scheme for navbar and sidebar

--- a/demo/branding.html
+++ b/demo/branding.html
@@ -635,7 +635,7 @@
                                             <div class="col-lg-12">
 
                                                 <div class="alert alert-info" role="alert"><i class="fa fa-info-circle"></i>
-                                                    To change navigation colors, use <mark>navbar-inverse</mark> alone or in combination with one of the following classes: <mark>'navbar-blue', 'navbar-green', 'navbar-purple', 'navbar-cyan', 'navbar-brown'</mark>. For sidebar use one of the following classes: <mark>'sidebar-inverse', 'sidebar-blue', 'sidebar-green', 'sidebar-purple', 'sidebar-cyan', 'sidebar-brown'</mark>.
+                                                    To change the navigation colors, use <mark>navbar-inverse</mark> alone or in combination with one of the following classes: <mark>'navbar-blue', 'navbar-green', 'navbar-purple', 'navbar-cyan', 'navbar-brown'</mark>. For sidebar use one of the following classes: <mark>'sidebar-inverse', 'sidebar-blue', 'sidebar-green', 'sidebar-purple', 'sidebar-cyan', 'sidebar-brown'</mark>.
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
